created favourite page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ResturantReccomendationFrontend</string>
+    <string name="delete_button_description">Delete</string>
 </resources>
